<resources>
    <string name="app_name">Hoplay</string>
    <string name="hello_world">Hello World</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_hoplay_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_hoplay_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_header_general">General</string>
    <string name="settings_allow_messages">Receive messages from anyone</string>
    <string name="settings_allow_messages_summary">You will be able to receive messages from any user, even if the user is not in the list of your friends.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="settings_services_summary">Connect with social network accounts</string>
    <string name="settings_header_about">About</string>
    <string name="settings_terms">Terms of use</string>
    <string name="settings_thanks">Acknowledgements</string>
    <string name="settings_version">Hoplay v2.0.4</string>
    <string name="settings_copyright_info">Copyright info</string>
    <string name="settings_header_others">Others</string>
    <string name="settings_contact_us">Contact us</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_notifications">Push notifications</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_edit_profile">Edit Profile</string>
    <string name="settings_change_password_message">Reset password link has been sent to your email : %1$s , Please check your inbox</string>
    <string name="settings_deactivate_account">Deactivate account</string>
    <string name="settings_view_blocked_list">View blocked list</string>
    <string name="settings_services">Services</string>
    <string name="settings_contact_us_summary">Report a problem</string>
    <string name="action_settings">Settings</string>
    <string name="settings_screen_logout_message">Come back soon</string>
    <string name="about_dialog_app_name">Hoplay</string>
    <string name="about_dialog_version">Version 1.0</string>
    <string name="about_dialog_copyright_info">Copyright © 2017 Hoplay.online</string>
    <string name="about_dialog_ok">O K</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_small_password">Minimum 6 characters</string>
    <string name="error_small_username">Minimum 3 characters</string>
    <string name="error_small_fullname">Minimum 2 characters</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">User with this mail is already registered</string>
    <string name="error_password">Invalid password.</string>
    <string name="error_email">invalid Email.</string>
    <string name="error_confirm_password">Passwords do not match</string>
    <string name="error_empty_email_field">Email field is empty</string>
    <string name="error_empty_password">Password field is empty</string>
    <string name="security_dialog_message">What is your favorite video game character ?</string>
    <string name="security_dialog_edittext_hint">Answer</string>
    <string name="forget_password_find_your_account">Find your Hoplay account</string>
    <string name="forget_password_your_email">Email Address</string>
    <string name="forget_password_search_account">S e a r c h</string>
    <string name="forget_password_reset_password">Reset password has been sent to your email : %1$s , Please check your inbox</string>
    <string name="login_username">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_signin">S I G N &#160; I N</string>
    <string name="login_forget_password">F o r g o t &#160; P a s s w o r d  ?</string>
    <string name="login_do_not_have_account">D o n\'t &#160; &#160; h a v e &#160; &#160;a n &#160; &#160;a c c o u n t  ?</string>
    <string name="login_signup">S I G N &#160; U P</string>
    <string name="login_signing_in">Signing in ...</string>
    <string name="login_just_a_moment">Just one moment..</string>
    <string name="login_auth_welcome">Welcome , </string>
    <string name="login_please_check_email_or_password">Please check your email or password</string>
    <string name="make_request_fragment_new_request">N e w &#160; &#160; R e q u e s t</string>
    <string name="make_request_fragment_saved_request">Saved Requests</string>
    <string name="make_request_fragment_add_game">Add Game</string>
    <string name="make_request_fragment_do_not_have_game">You do not have this game. Please add it to your library to continue</string>
    <string name="make_request_fragment_no_saved_request_message">No Saved Requests</string>
    <string name="main_app_menu_welcome_message">Welcome %1$s ❤</string>
    <string name="add_game_search_bar">Search for a Game</string>
    <string name="add_game_no_game_message">You do not have any game</string>
    <string name="add_game_no_results_message">No Results</string>
    <string name="add_game_tour_greeting">Hi %1$s ,</string>
    <string name="add_game_tour_message">You will not be able to create or search for a game request unless you have that game in your library</string>
    <string name="add_game_skip_button">S K I P</string>
    <string name="add_game_done_button">D O N E</string>
    <string name="add_game_add_game_button">Add Games</string>
    <string name="add_game_tour_button">Continue</string>
    <string name="users_toolbar_title">User</string>
    <string name="users_toolbar_subtitle">Bio</string>
    <string name="support_activity_message">Send Us a Message</string>
    <string name="support_title">Title</string>
    <string name="support_message">Message</string>
    <string name="support_send">Send</string>
    <string name="new_request_pc">PC</string>
    <string name="new_request_playstation">Playstation</string>
    <string name="new_request_Xbox">Xbox</string>
    <string name="new_request_what_do_you_want_to_play">What do you want to play ?</string>
    <string name="new_request_your_description">You description here -_-</string>
    <string name="new_request_create_new_request">Create New Request</string>
    <string name="new_request_request">Request</string>
    <string name="new_request_save_request">Save</string>
    <string name="new_request_country">Region</string>
    <string name="new_request_players_number">Number Of Players</string>
    <string name="new_request_players_ranks">Players Rank</string>
    <string name="terms_and_conditions_agree">A g r e e</string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="terms_and_conditions_intro">Welcome to Hoplay App, an Application aims to make the ultimate gaming experience, and form a better gaming community.</string>
    <string name="terms_and_conditions_term1">1. The User shall use Hoplay app at his/her sole risk and expense. Software is made available for use on “as is” basis.</string>
    <string name="terms_and_conditions_term2">2. The Administration may not be held liable for any illegal acts of the User or any third parties.</string>
    <string name="terms_and_conditions_term3">3. The Administration shall bear no liability for any statements of the User published with use of Hoplay Software. Also, the Administration shall not be liable for any (mis)conduct of the User while using the Hoplay Software.</string>
    <string name="terms_and_conditions_term4">4. The Administration shall bear no liability for loss by the User of access to his/her account on the Site (including loss of login, password or any other details required for access to and use of Hoplay Software).</string>
    <string name="terms_and_conditions_term5">5. The Administration shall bear no liability for any missing, inaccurate or incorrect data specified by the User when using the qaChat Software.</string>
    <string name="terms_and_conditions_term6">6. The Administration shall not reimburse the User for any expenses connected with acquiring of the rights to use the Hoplay app Supplemental Functionality including in case where the User’s access to the Hoplay app is suspended as a result, inter alia, of breaching the Hoplay Terms and Conditions, and/or should this Agreement is suspended or terminated by any reason.</string>
    <string name="terms_and_conditions_term7">7. The Administration shall not be obliged to present to the User any documents or other evidences of User’s breach hereof as a result of which the User was fully or partially denied a right to access the Hoplay app.</string>
    <string name="terms_and_conditions_term8">8. The User shall not:</string>
    <string name="request_lobby_math_type_text">Match Type</string>
    <string name="request_lobby_room_admin">Room Admin</string>
    <string name="request_lobby_room_admin_username">AdminUsername</string>
    <string name="request_lobby_players_text">Players</string>
    <string name="request_lobby_rank_text">Rank</string>
    <string name="request_lobby_rank_value">RankValue</string>
    <string name="request_lobby_region_text">Region</string>
    <string name="request_lobby_region_value">RegionValue</string>
    <string name="request_lobby_join_button">J O I N</string>
    <string name="friend_pop_up_menu_chat_button">C h a t</string>
    <string name="friend_pop_up_menu_view_profile_button">View Profile</string>
    <string name="friend_pop_up_menu_delete_friend_button">D e l e t e</string>
    <string name="game_not_found_sorry">Sorry, we could not find this game</string>
    <string name="game_not_found_message">If you believe this game should \n be added, please let us know !</string>
    <string name="game_not_found_contact_us">Contact Us</string>
    <string name="game_not_found_discard">Discard</string>
</resources>