<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/pop_up_backgrounds"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/chat_friend_pop_up_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/friend_pop_up_menu_chat_button" />
    <Button
        android:id="@+id/view_profile_friend_pop_up_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/chat_friend_pop_up_button"
        android:text="@string/friend_pop_up_menu_view_profile_button" />
    <Button
        android:id="@+id/delete_friend_pop_up_button"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/view_profile_friend_pop_up_button"
        android:text="@string/friend_pop_up_menu_delete_friend_button" />


</RelativeLayout>